# szakdoga

./: .gitignore  CMakeLists.txt  \
doc/: main.typ  templ.typ  utils.typ  works.yml
src/: Context.cpp  Context.hpp  GLGraphics.cpp  GLGraphics.hpp  GLVertexArray.cpp  GLVertexArray.hpp  Identity.cpp  Identity.hpp  Polynomial.hpp  PowerPermutation.cpp  PowerPermutation.hpp  Rational.hpp  Shader.hpp  Variable.cpp  Variable.hpp  basic_implementation.cpp  basic_implementation.hpp  glad.c  glad.h  grid.hpp  io.cpp  io.hpp  main.cpp  math_utility.cpp  math_utility.hpp  matrix_utility.hpp  poly_implementation.cpp
src/shader/: basic.fs  basic.vs
test/: function_test.cpp
